# Backend

./: .env  AUTHORIZATION_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_auth.py
app/: __init__.py  app.py
app/config/: database.py  init_db.py  my_settings.py
app/controllers/: __init__.py  admin_permission_controller.py  admin_role_controller.py  admin_user_controller.py  auth_controller.py  end_client_controller.py  enterprise_admin_controller.py  enterprise_client_controller.py  enterprise_permission_controller.py  enterprise_role_controller.py  enterprise_user_controller.py  main_admin_controller.py  rbac_controller.py  role_controller.py  scope_controller.py  user_controller.py
app/models/: __init__.py  admin_permission_model.py  admin_role_model.py  admin_user_model.py  auth_model.py  end_client_model.py  enterprise_admin_model.py  enterprise_client_model.py  enterprise_permission_model.py  enterprise_role_model.py  enterprise_user_model.py  main_admin_permission_model.py  main_admin_role_model.py  main_admin_user_model.py  role_model.py  role_scope_model.py  scope_model.py  user_model.py  user_role_model.py
app/routes/: __init__.py  admin_permission_routes.py  admin_role_routes.py  admin_user_routes.py  auth_routes.py  end_client_routes.py  enterprise_admin_routes.py  enterprise_client_routes.py  enterprise_permission_routes.py  enterprise_role_routes.py  enterprise_user_routes.py  rbac_routes.py  role_routes.py  scope_routes.py  user_routes.py
app/services/: __init__.py  admin_permission_service.py  (+9 more)
database/: rbac_system.db
(+3 files in other folders)
