[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
        "fastapi>=0.116.1",
        "python-dotenv>=1.1.1",
        "uvicorn>=0.35.0",
        "sqlmodel>=0.0.14",
        "pymysql>=1.1.0",
        "pydantic>=2.0.0",
        "pydantic-settings>=2.1.0",
        "cryptography>=45.0.5",
        "sentry-sdk[fastapi]>=2.34.0",
        "tenacity>=8.2.0",
        "aiosqlite>=0.21.0",
        "python-multipart>=0.0.20",
        "passlib[bcrypt]>=1.7.4",
        "bcrypt<4.0",
        "python-jose[cryptography]>=3.3.0",
        "PyJWT>=2.8.0",
        "bcrypt<4.0",
]
